# form-builder

./: .gitignore  README.md  docker-compose.yml
backend-app/: .gitignore  Dockerfile  pyproject.toml
backend-app/app/: main.py
backend-app/app/routers/: items.py
dev/.obsidian/: app.json  canvas.json  daily-notes.json  templates.json  workspace.json
dev/backend-app/: .dockerignore  pyproject.toml
dev/frontend-app/: .dockerignore  Dockerfile
frontend-app/: .gitignore  Dockerfile  package.json
